# StarTest2

./: README.md  build.sh  index.html  index.js  main.js  package.json  pnpm-lock.yaml  webpack.config.js
public/: index.html
rust/: Cargo.toml
rust/src/: camera.rs  chunk.rs  chunkstore.rs  lib.rs  matrix.rs  orientation.rs  universe.rs  vector3.rs  viewport.rs
src/: index.js  pixiapp.js
src/input/: input.js
startest2/: index.d.ts  index.js  package.json  pixiapp.js  pnpm-lock.yaml
startest2/input/: input.js
