[package]
name = "startest2-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.87"
rand = "0.8.5"
getrandom = { version = "0.2.10", features = ["js"] }
itertools = "0.10.3"

[lib]
crate-type = ["cdylib", "rlib"]
